@@ -134,7 +134,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.4" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.1.5" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
